[package]
name = "kalshi-mdp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23.0-beta.1", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
url = "2.5.0"
env_logger = "0.10.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.1"
serde = { version = "1.0.193", features = ["derive"] }
native-tls = "0.2"
websocket = "0.26"
log = "0.4.20"
anyhow = "1.0.75"
redis-derive = "0.1.7"

